TextHtml: fixed styles to wrap a long text

--- a/src/app/components/message/message.component.scss
+++ b/src/app/components/message/message.component.scss
@@ -29,7 +29,7 @@
         margin: 0;
 
         .text {
-            overflow-wrap: break-word;
+            overflow-wrap: anywhere;
             font-size: 14px;
             line-height: 20px;
             margin: 0 0 4px 0;
@@ -63,7 +63,7 @@
                 align-items: center;
 
                 .link-preview-text {
-                    overflow-wrap: break-word;
+                    overflow-wrap: anywhere;
                     font-size: 14px;
                     line-height: 20px;
                     font-weight: 600;
